# expedia-data-mining

./: README.md  pyproject.toml
expedia/humanAttempt/: teste.ipynb
expedia/llmAttempt/: phase2.ipynb  phase2_execution.ipynb
